--- a/pom.xml
+++ b/pom.xml
@@ -478,7 +478,7 @@
                             </execution>
                         </executions>
                         <configuration>
-                            <name>UIPTV-aarch64</name>
+                            <name>UIPTV</name>
                             <type>DEB</type>
                             <vendor>SPC</vendor>
                             <copyright>Copyright © 2024 SPC</copyright>
