--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ on:
       - main
 
 jobs:
-  build:
+  fast_builds:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -19,9 +19,6 @@ jobs:
           - os: windows-latest
             arch: x86_64
             profile: windows-x86_64
-          - os: windows-latest-arm64
-            arch: aarch64
-            profile: windows-aarch64
           - os: macos-latest
             arch: x86_64
             profile: mac-x86_64
@@ -37,6 +34,42 @@ jobs:
           - os: ubuntu-latest
             arch: x86_64
             profile: linux-x86_64,pkg-app-image
+        java: ['25']
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v6
+
+      - name: Install RPM builder for DEB-based systems
+        if: runner.os == 'Linux' && contains(matrix.profile, 'pkg-rpm')
+        run: sudo apt-get update && sudo apt-get install -y rpm
+
+      - name: Set up JDK ${{ matrix.java }}
+        uses: actions/setup-java@v5
+        with:
+          java-version: ${{ matrix.java }}
+          distribution: 'temurin'
+          cache: 'maven'
+
+      - name: Build with Maven
+        run: mvn -B clean package -P ${{ matrix.profile }}
+
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v5
+        with:
+          name: UIPTV-${{ matrix.os }}-${{ matrix.arch }}
+          path: |
+            target/dist/*
+
+  slow_builds:
+    runs-on: ${{ matrix.os }}
+    needs: fast_builds # This job will only run after fast_builds completes
+    strategy:
+      matrix:
+        include:
+          - os: windows-latest-arm64
+            arch: aarch64
+            profile: windows-aarch64
           - os: ubuntu-latest-arm64
             arch: aarch64
             profile: linux-aarch64,pkg-deb
@@ -75,7 +108,7 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
-    needs: build
+    needs: [fast_builds, slow_builds] # Release needs both build jobs to complete
     if: startsWith(github.ref, 'refs/tags/')
     permissions:
       contents: write
