--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,49 +11,30 @@ on:
       - main
 
 jobs:
-  fast_builds:
+  build_mac:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         include:
-          - os: windows-latest
-            arch: x86_64
-            profile: windows-x86_64
           - os: macos-latest
             arch: x86_64
             profile: mac-x86_64
           - os: macos-latest
             arch: aarch64
             profile: mac-aarch64
-          - os: ubuntu-latest
-            arch: x86_64
-            profile: linux-x86_64,pkg-deb
-          - os: ubuntu-latest
-            arch: x86_64
-            profile: linux-x86_64,pkg-rpm
-          - os: ubuntu-latest
-            arch: x86_64
-            profile: linux-x86_64,pkg-app-image
         java: ['25']
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v6
-
-      - name: Install RPM builder for DEB-based systems
-        if: runner.os == 'Linux' && contains(matrix.profile, 'pkg-rpm')
-        run: sudo apt-get update && sudo apt-get install -y rpm
-
       - name: Set up JDK ${{ matrix.java }}
         uses: actions/setup-java@v5
         with:
           java-version: ${{ matrix.java }}
           distribution: 'temurin'
           cache: 'maven'
-
       - name: Build with Maven
         run: mvn -B clean package -P ${{ matrix.profile }}
-
       - name: Upload Artifacts
         uses: actions/upload-artifact@v5
         with:
@@ -61,63 +42,120 @@ jobs:
           path: |
             target/dist/*
 
-  slow_builds:
-    runs-on: ${{ matrix.os }}
-    needs: fast_builds # This job will only run after fast_builds completes
+  build_win_x86:
+    runs-on: windows-latest
+    needs: build_mac
     strategy:
       matrix:
-        include:
-          - os: windows-latest-arm64
-            arch: aarch64
-            profile: windows-aarch64
-          - os: ubuntu-latest-arm64
-            arch: aarch64
-            profile: linux-aarch64,pkg-deb
-          - os: ubuntu-latest-arm64
-            arch: aarch64
-            profile: linux-aarch64,pkg-rpm
-          - os: ubuntu-latest-arm64
-            arch: aarch64
-            profile: linux-aarch64,pkg-app-image
         java: ['25']
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v6
-
-      - name: Install RPM builder for DEB-based systems
-        if: runner.os == 'Linux' && contains(matrix.profile, 'pkg-rpm')
-        run: sudo apt-get update && sudo apt-get install -y rpm
-
       - name: Set up JDK ${{ matrix.java }}
         uses: actions/setup-java@v5
         with:
           java-version: ${{ matrix.java }}
           distribution: 'temurin'
           cache: 'maven'
+      - name: Build with Maven
+        run: mvn -B clean package -P windows-x86_64
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v5
+        with:
+          name: UIPTV-windows-latest-x86_64
+          path: |
+            target/dist/*
 
+  build_linux_x86:
+    runs-on: ubuntu-latest
+    needs: build_win_x86
+    strategy:
+      matrix:
+        include:
+          - profile: linux-x86_64,pkg-deb
+            pkg: deb
+          - profile: linux-x86_64,pkg-rpm
+            pkg: rpm
+          - profile: linux-x86_64,pkg-app-image
+            pkg: app-image
+        java: ['25']
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v6
+      - name: Install RPM builder for DEB-based systems
+        if: runner.os == 'Linux' && contains(matrix.profile, 'pkg-rpm')
+        run: sudo apt-get update && sudo apt-get install -y rpm
+      - name: Set up JDK ${{ matrix.java }}
+        uses: actions/setup-java@v5
+        with:
+          java-version: ${{ matrix.java }}
+          distribution: 'temurin'
+          cache: 'maven'
       - name: Build with Maven
         run: mvn -B clean package -P ${{ matrix.profile }}
-
       - name: Upload Artifacts
-        uses: actions/upload-artifact@v6
+        uses: actions/upload-artifact@v5
         with:
-          name: UIPTV-${{ matrix.os }}-${{ matrix.arch }}
+          name: UIPTV-ubuntu-latest-x86_64-${{ matrix.pkg }}
+          path: |
+            target/dist/*
+
+  build_slow_arm:
+    runs-on: ${{ matrix.os }}
+    needs: build_linux_x86
+    strategy:
+      matrix:
+        include:
+          - os: windows-latest-arm64
+            arch: aarch64
+            profile: windows-aarch64
+            pkg: ""
+          - os: ubuntu-latest-arm64
+            arch: aarch64
+            profile: linux-aarch64,pkg-deb
+            pkg: deb
+          - os: ubuntu-latest-arm64
+            arch: aarch64
+            profile: linux-aarch64,pkg-rpm
+            pkg: rpm
+          - os: ubuntu-latest-arm64
+            arch: aarch64
+            profile: linux-aarch64,pkg-app-image
+            pkg: app-image
+        java: ['25']
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v6
+      - name: Install RPM builder for DEB-based systems
+        if: runner.os == 'Linux' && contains(matrix.profile, 'pkg-rpm')
+        run: sudo apt-get update && sudo apt-get install -y rpm
+      - name: Set up JDK ${{ matrix.java }}
+        uses: actions/setup-java@v5
+        with:
+          java-version: ${{ matrix.java }}
+          distribution: 'temurin'
+          cache: 'maven'
+      - name: Build with Maven
+        run: mvn -B clean package -P ${{ matrix.profile }}
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v5
+        with:
+          name: UIPTV-${{ matrix.os }}-${{ matrix.arch }}${{ matrix.pkg && format('-{0}', matrix.pkg) || '' }}
           path: |
             target/dist/*
 
   release:
     runs-on: ubuntu-latest
-    needs: [fast_builds, slow_builds] # Release needs both build jobs to complete
+    needs: [build_mac, build_win_x86, build_linux_x86, build_slow_arm]
     if: startsWith(github.ref, 'refs/tags/')
     permissions:
       contents: write
     steps:
       - name: Download all artifacts
-        uses: actions/download-artifact@v7
+        uses: actions/download-artifact@v6
         with:
           path: artifacts
-
       - name: Create Release and Upload Artifacts
         uses: softprops/action-gh-release@v2
         with:
