--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <!--        <javafx.platform>mac-aarch64</javafx.platform>-->
         <!--        <javafx.platform>win</javafx.platform>-->
         <javafx.platform>linux</javafx.platform>
+        <jpackage.type>APP_IMAGE</jpackage.type>
     </properties>
 
     <dependencies>
@@ -256,16 +257,12 @@
     <profiles>
         <!-- Windows Profiles -->
         <profile>
-            <id>windows-x86_64</id>
+            <id>windows-build</id>
             <activation>
                 <os>
                     <family>windows</family>
-                    <arch>amd64</arch>
                 </os>
             </activation>
-            <properties>
-                <javafx.platform>win</javafx.platform>
-            </properties>
             <build>
                 <plugins>
                     <plugin>
@@ -301,6 +298,18 @@
             </build>
         </profile>
         <profile>
+            <id>windows-x86_64</id>
+            <activation>
+                <os>
+                    <family>windows</family>
+                    <arch>amd64</arch>
+                </os>
+            </activation>
+            <properties>
+                <javafx.platform>win</javafx.platform>
+            </properties>
+        </profile>
+        <profile>
             <id>windows-aarch64</id>
             <activation>
                 <os>
@@ -311,39 +320,6 @@
             <properties>
                 <javafx.platform>win-aarch64</javafx.platform>
             </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.panteleyev</groupId>
-                        <artifactId>jpackage-maven-plugin</artifactId>
-                        <version>1.7.1</version>
-                        <executions>
-                            <execution>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>jpackage</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                        <configuration>
-                            <name>UIPTV</name>
-                            <vendor>SPC</vendor>
-                            <copyright>Copyright © 2024 SPC</copyright>
-                            <input>${project.build.directory}/jpackage-app</input>
-                            <mainClass>com.uiptv.Main</mainClass>
-                            <mainJar>UIPTV.jar</mainJar>
-                            <destination>target/dist</destination>
-                            <icon>src/main/resources/icon.ico</icon>
-                            <appVersion>${jpackage.version}</appVersion>
-                            <javaOptions>
-                                <option>-Duser.dir=$APPDIR</option>
-                            </javaOptions>
-                            <winMenu>true</winMenu>
-                            <winShortcut>true</winShortcut>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
         </profile>
 
         <!-- macOS Profiles -->
@@ -460,7 +436,7 @@
             </properties>
         </profile>
         <profile>
-            <id>mac-aarch64</id>
+            <id>mac-.aarch64</id>
             <activation>
                 <os>
                     <family>mac</family>
@@ -473,6 +449,51 @@
         </profile>
 
         <!-- Linux OS/Arch Profiles -->
+        <profile>
+            <id>linux-build</id>
+            <activation>
+                <os>
+                    <family>linux</family>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.panteleyev</groupId>
+                        <artifactId>jpackage-maven-plugin</artifactId>
+                        <version>1.7.1</version>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>jpackage</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <name>UIPTV</name>
+                            <type>${jpackage.type}</type>
+                            <vendor>SPC</vendor>
+                            <copyright>Copyright © 2024 SPC</copyright>
+                            <input>${project.build.directory}/jpackage-app</input>
+                            <mainClass>com.uiptv.Main</mainClass>
+                            <mainJar>UIPTV.jar</mainJar>
+                            <destination>target/dist</destination>
+                            <icon>src/main/resources/icon.png</icon>
+                            <linuxShortcut>true</linuxShortcut>
+                            <linuxPackageName>uiptv</linuxPackageName>
+                            <linuxMenuGroup>Video</linuxMenuGroup>
+                            <appVersion>${jpackage.version}</appVersion>
+                            <javaOptions>
+                                <option>-Duser.dir=$APPDIR</option>
+                            </javaOptions>
+                            <linuxAppCategory>Video;AudioVideo;Player;</linuxAppCategory>
+                            <resourceDir>${project.basedir}/src/main/resources/jpackage/linux</resourceDir>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
         <profile>
             <id>linux-x86_64</id>
             <activation>
@@ -501,118 +522,21 @@
         <!-- Linux Packaging Profiles -->
         <profile>
             <id>pkg-deb</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.panteleyev</groupId>
-                        <artifactId>jpackage-maven-plugin</artifactId>
-                        <version>1.7.1</version>
-                        <executions>
-                            <execution>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>jpackage</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                        <configuration>
-                            <name>UIPTV</name>
-                            <type>DEB</type>
-                            <vendor>SPC</vendor>
-                            <copyright>Copyright © 2024 SPC</copyright>
-                            <input>${project.build.directory}/jpackage-app</input>
-                            <mainClass>com.uiptv.Main</mainClass>
-                            <mainJar>UIPTV.jar</mainJar>
-                            <destination>target/dist</destination>
-                            <icon>src/main/resources/icon.png</icon>
-                            <linuxShortcut>true</linuxShortcut>
-                            <linuxPackageName>uiptv</linuxPackageName>
-                            <linuxMenuGroup>Video</linuxMenuGroup>
-                            <appVersion>${jpackage.version}</appVersion>
-                            <javaOptions>
-                                <option>-Duser.dir=$APPDIR</option>
-                            </javaOptions>
-                            <linuxAppCategory>Video;AudioVideo;Player;</linuxAppCategory>
-                            <resourceDir>${project.basedir}/src/main/resources/jpackage/linux</resourceDir>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
+            <properties>
+                <jpackage.type>DEB</jpackage.type>
+            </properties>
         </profile>
         <profile>
             <id>pkg-rpm</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.panteleyev</groupId>
-                        <artifactId>jpackage-maven-plugin</artifactId>
-                        <version>1.7.1</version>
-                        <executions>
-                            <execution>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>jpackage</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                        <configuration>
-                            <name>UIPTV</name>
-                            <type>RPM</type>
-                            <vendor>SPC</vendor>
-                            <copyright>Copyright © 2024 SPC</copyright>
-                            <input>${project.build.directory}/jpackage-app</input>
-                            <mainClass>com.uiptv.Main</mainClass>
-                            <mainJar>UIPTV.jar</mainJar>
-                            <destination>target/dist</destination>
-                            <icon>src/main/resources/icon.png</icon>
-                            <linuxShortcut>true</linuxShortcut>
-                            <linuxPackageName>uiptv</linuxPackageName>
-                            <linuxMenuGroup>Video</linuxMenuGroup>
-                            <appVersion>${jpackage.version}</appVersion>
-                            <javaOptions>
-                                <option>-Duser.dir=$APPDIR</option>
-                            </javaOptions>
-                            <linuxAppCategory>Video;AudioVideo;Player;</linuxAppCategory>
-                            <resourceDir>${project.basedir}/src/main/resources/jpackage/linux</resourceDir>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
+            <properties>
+                <jpackage.type>RPM</jpackage.type>
+            </properties>
         </profile>
         <profile>
             <id>pkg-app-image</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.panteleyev</groupId>
-                        <artifactId>jpackage-maven-plugin</artifactId>
-                        <version>1.7.1</version>
-                        <executions>
-                            <execution>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>jpackage</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                        <configuration>
-                            <name>UIPTV</name>
-                            <type>APP_IMAGE</type>
-                            <vendor>SPC</vendor>
-                            <copyright>Copyright © 2024 SPC</copyright>
-                            <input>${project.build.directory}/jpackage-app</input>
-                            <mainClass>com.uiptv.Main</mainClass>
-                            <mainJar>UIPTV.jar</mainJar>
-                            <destination>target/dist</destination>
-                            <icon>src/main/resources/icon.png</icon>
-                            <appVersion>${jpackage.version}</appVersion>
-                            <javaOptions>
-                                <option>-Duser.dir=$APPDIR</option>
-                            </javaOptions>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
+            <properties>
+                <jpackage.type>APP_IMAGE</jpackage.type>
+            </properties>
         </profile>
     </profiles>
 </project>
