--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,10 @@
-# Compiled class file
-*.class
+# IDE files
+.idea/
+*.iml
 
-# Log file
-*.log
+# macOS files
+.DS_Store
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
-/.idea/
-target
-/dependency-reduced-pom.xml
+# Maven build output
+target/
+pom.xml.versionsBackup
