--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,6 @@ name: Build, Package and Release
 
 on:
   push:
-    branches:
-      - main
     tags:
       - 'v*.*.*'
   pull_request:
@@ -12,149 +10,130 @@ on:
 
 jobs:
   build_windows:
-    runs-on: ${{ matrix.os }}
+    runs-on: windows-latest
     strategy:
       matrix:
         include:
-          - os: windows-latest
-            arch: x86_64
+          - arch: x86_64
             profile: windows-x86_64
-#          - os: windows-latest-arm64
-#            arch: aarch64
-#            profile: windows-aarch64
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v6
+      - uses: actions/checkout@v4
+
       - name: Set up JDK 25
         uses: actions/setup-java@v5
         with:
+          distribution: temurin
           java-version: '25'
-          distribution: 'temurin'
-          cache: 'maven'
-      - name: Build with Maven
+          cache: maven
+
+      - name: Build Windows package
         run: mvn -B clean package -P ${{ matrix.profile }}
-      - name: Upload Artifacts
-        uses: actions/upload-artifact@v6
+
+      - name: Upload Windows artifact
+        uses: actions/upload-artifact@v4
         with:
-          name: UIPTV-${{ matrix.os }}-${{ matrix.arch }}
+          name: UIPTV-windows-${{ matrix.arch }}
           path: target/dist/*
 
+
   build_mac:
-    runs-on: ${{ matrix.os }}
+    runs-on: macos-latest
     strategy:
       matrix:
         include:
-          - os: macos-latest
-            arch: x86_64
+          - arch: x86_64
             profile: mac-x86_64
-          - os: macos-latest
-            arch: aarch64
+          - arch: aarch64
             profile: mac-aarch64
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v6
+      - uses: actions/checkout@v4
+
       - name: Set up JDK 25
         uses: actions/setup-java@v5
         with:
+          distribution: temurin
           java-version: '25'
-          distribution: 'temurin'
-          cache: 'maven'
-      - name: Build with Maven
+          cache: maven
+
+      - name: Build macOS package
         run: mvn -B clean package -P ${{ matrix.profile }}
-      - name: Upload Artifacts
-        uses: actions/upload-artifact@v6
+
+      - name: Upload macOS artifact
+        uses: actions/upload-artifact@v4
         with:
-          name: UIPTV-${{ matrix.os }}-${{ matrix.arch }}
+          name: UIPTV-macos-${{ matrix.arch }}
           path: target/dist/*
+
 
   build_linux:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v6
+      - uses: actions/checkout@v4
+
       - name: Set up JDK 25
         uses: actions/setup-java@v5
         with:
+          distribution: temurin
           java-version: '25'
-          distribution: 'temurin'
-          cache: 'maven'
-      - name: Install RPM builder
+          cache: maven
+
+      - name: Install RPM tools
         run: sudo apt-get update && sudo apt-get install -y rpm
 
       - name: Build DEB package
         run: mvn -B clean package -P linux-x86_64,pkg-deb
-      - name: Upload DEB Artifact
-        uses: actions/upload-artifact@v6
+      - name: Upload DEB artifact
+        uses: actions/upload-artifact@v4
         with:
-          name: UIPTV-ubuntu-latest-x86_64-deb
+          name: UIPTV-linux-x86_64-deb
           path: target/dist/*
+
+      - name: Clean dist directory
+        run: rm -rf target/dist/*
 
       - name: Build RPM package
         run: mvn -B clean package -P linux-x86_64,pkg-rpm
-      - name: Upload RPM Artifact
-        uses: actions/upload-artifact@v6
+      - name: Upload RPM artifact
+        uses: actions/upload-artifact@v4
         with:
-          name: UIPTV-ubuntu-latest-x86_64-rpm
+          name: UIPTV-linux-x86_64-rpm
           path: target/dist/*
+
+      - name: Clean dist directory
+        run: rm -rf target/dist/*
 
       - name: Build AppImage package
         run: mvn -B clean package -P linux-x86_64,pkg-app-image
-      - name: Upload AppImage Artifact
-        uses: actions/upload-artifact@v6
+      - name: Upload AppImage artifact
+        uses: actions/upload-artifact@v4
         with:
-          name: UIPTV-ubuntu-latest-x86_64-app-image
+          name: UIPTV-linux-x86_64-app-image
           path: target/dist/*
 
-#  build_linux_arm:
-#    runs-on: ubuntu-latest-arm64
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v6
-#      - name: Set up JDK 25
-#        uses: actions/setup-java@v5
-#        with:
-#          java-version: '25'
-#          distribution: 'temurin'
-#          cache: 'maven'
-#      - name: Install RPM builder
-#        run: sudo apt-get update && sudo apt-get install -y rpm
-#
-#      - name: Build DEB package
-#        run: mvn -B clean package -P linux-aarch64,pkg-deb
-#      - name: Upload DEB Artifact
-#        uses: actions/upload-artifact@v6
-#        with:
-#          name: UIPTV-ubuntu-latest-arm64-deb
-#          path: target/dist/*
-#
-#      - name: Build RPM package
-#        run: mvn -B clean package -P linux-aarch64,pkg-rpm
-#      - name: Upload RPM Artifact
-#        uses: actions/upload-artifact@v6
-#        with:
-#          name: UIPTV-ubuntu-latest-arm64-rpm
-#          path: target/dist/*
-#
-#      - name: Build AppImage package
-#        run: mvn -B clean package -P linux-aarch64,pkg-app-image
-#      - name: Upload AppImage Artifact
-#        uses: actions/upload-artifact@v6
-#        with:
-#          name: UIPTV-ubuntu-latest-arm64-app-image
-#          path: target/dist/*
 
   release:
     runs-on: ubuntu-latest
-    needs: [build_windows, build_mac, build_linux]
+    needs:
+      - build_windows
+      - build_mac
+      - build_linux
     if: startsWith(github.ref, 'refs/tags/')
     permissions:
       contents: write
+
     steps:
       - name: Download all artifacts
-        uses: actions/download-artifact@v7
+        uses: actions/download-artifact@v4
         with:
           path: artifacts
-      - name: Create Release and Upload Artifacts
+
+      - name: Verify artifacts
+        run: ls -R artifacts
+
+      - name: Create GitHub Release and upload assets
         uses: softprops/action-gh-release@v2
         with:
+          tag_name: ${{ github.ref_name }}
+          name: Release ${{ github.ref_name }}
+          generate_release_notes: true
           files: artifacts/*/*
