--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,8 @@ jobs:
           - arch: x86_64
             profile: windows-x86_64
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout source
+        uses: actions/checkout@v4
 
       - name: Set up JDK 25
         uses: actions/setup-java@v5
@@ -46,7 +47,8 @@ jobs:
           - arch: aarch64
             profile: mac-aarch64
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout source
+        uses: actions/checkout@v4
 
       - name: Set up JDK 25
         uses: actions/setup-java@v5
@@ -68,7 +70,8 @@ jobs:
   build_linux:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout source
+        uses: actions/checkout@v4
 
       - name: Set up JDK 25
         uses: actions/setup-java@v5
@@ -82,6 +85,7 @@ jobs:
 
       - name: Build DEB package
         run: mvn -B clean package -P linux-x86_64,pkg-deb
+
       - name: Upload DEB artifact
         uses: actions/upload-artifact@v4
         with:
@@ -93,6 +97,7 @@ jobs:
 
       - name: Build RPM package
         run: mvn -B clean package -P linux-x86_64,pkg-rpm
+
       - name: Upload RPM artifact
         uses: actions/upload-artifact@v4
         with:
@@ -104,6 +109,7 @@ jobs:
 
       - name: Build AppImage package
         run: mvn -B clean package -P linux-x86_64,pkg-app-image
+
       - name: Upload AppImage artifact
         uses: actions/upload-artifact@v4
         with:
@@ -136,4 +142,5 @@ jobs:
           tag_name: ${{ github.ref_name }}
           name: Release ${{ github.ref_name }}
           generate_release_notes: true
+          overwrite: true
           files: artifacts/*/*
